# c-af-people-index-gds

./: .devcontainer.json  Dockerfile  README.md  profiles_SOURCE.csv  pyproject.toml
Notebook/: ivana_raw_preprocessing.ipynb
app/: app.py  gradio_interfaces.py  main.py  people_finder_chromadb.py  profiles.csv  requirements.txt  techtransfer_dummy.csv
app/static/: govuk-style.css  script.js
app/templates/: govuk_base.html  gradio_page.html  visualization.html
