[project]
name = "c-af-people-index-gds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.27",
    "ipykernel>=6.29.5",
    "langchain-core>=0.3.51",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
]
